syntax = "proto3";

package ul.fc.cn.proto;

message Business {
  BusinessId id = 1;
  string name = 2;
  string address = 3;
  double latitude = 4;
  double longitude = 5;
}

message BusinessId {
  int64 id = 1;
}

message UpdateBusinessRequest {
  BusinessId id = 1;
  Business business = 2;
}

message SearchBusinessRequest {
  double latitude = 1;
  double longitude = 2;
  double radius = 3;
  int32 limit = 4;
  int32 skip = 5;
}

message SearchBusinessResponse {
  repeated Business results = 1;
}

enum DELETE_BUSINESS_RESULT  {
  SUCCESS = 0;
  ERROR = 1;
  UNKNOWN = 2;
}

message DeleteBusinessResponse {
  DELETE_BUSINESS_RESULT result = 1;
}

service BusinessService {
  rpc addBusiness(Business) returns (BusinessId);
  rpc getBusiness(BusinessId) returns (Business);
  rpc updateBusiness(UpdateBusinessRequest) returns (Business);
  rpc deleteBusiness(BusinessId) returns (DeleteBusinessResponse);
  rpc searchBusiness(SearchBusinessRequest) returns (DeleteBusinessResponse);
}